style.css
* {
  text-decoration: none;
  list-style: none;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

body {
  height: 100vh;
  width: 100vw;
  background-color: black;
  margin: 0rem;
  overflow: hidden;
  background-image: url(https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80);
  background-size:cover;

}

header {
  display: flex;
  height: 10vh;
  width: 100vw;
  margin-bottom: 1.5em;
}

/* nav bar */

.navbar {
  padding: 3%;
  position: absolute;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  box-sizing: border-box;
  align-items: center;
}

.navbar a {
  color: white;
}

.navbar .logo {
  font-size: 2em;
  font-weight: bold;
}

.navbar .nav-links ul {
  display: flex;
}

.navbar .nav-links ul li {
  margin: 0 25px;
}

.navbar .nav-links a:hover {
  color: rgb(248, 156, 80);
  font-weight: 600;
}

.mobile-menu {
  margin-left: 0;
}

@media screen and  (max-width:900px) {
  .navbar {
    padding: 0;
  }

  .nav-links {
    display: flex;
    position: absolute;
    background-color: rgba(236, 142, 66, 0.308);
    backdrop-filter: blur(5px);
    width: 100vh;
    height: 100vh;
    top: 0;
    right: 0;
    justify-content: center;
    align-items: center;
    margin-left: -100%;
  }

  .nav-links .menulogo {
    display: block;
  }

  .nav-links ul {
    display: flex;
    flex-direction: column;
    padding: 0;
  }

  .navbar .nav-links ul li {
   margin: 25px 0;
   text-align: center;
   font-size: 1.2em;
  }

  .navbar .logo {
    position: absolute;
    left: 50px;
    top: 50px;
    font-weight: bold;
  }

}

.navbar .menulogo {
  position:absolute;
  width: 50px;
  top: 50px;
  right: 50px;
}

/* the lists of simps and their images */

.simplist {
  position:relative;
  display: flex;
}

/* images in each simp site */
#image-track > .image {
    width: 30vmin;
    height: 56vmin;
    object-fit: cover;
    object-position: center;
}

#image-track {
    display:flex;
    gap:4vmin;
    position: absolute; left: 50%; top: 50%; transform: translate(0%,-50%);   
    object-position: 100% 50%;
}

/* to modulate things */
img {
  width: 10%;
}

